# ECE1894-Industry-Project-with-Microsoft

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  setup.py
k8/: deployment.yaml  ms-config.yaml  pod.yaml
k8/deployment/: deployment.yaml
src/: Constants.py  __init__.py  conftest.py  k8_client.py  test_file.py  test_hello_world.py  test_hello_world1.py  test_hello_world2.py
src/main/: k8_client.py
src/test/: conftest.py  hello_world.py  pytest_fixtures.py  test_file.py
